--- a/.eslintrc
+++ b/.eslintrc
@@ -26,6 +26,7 @@
         "strict": 0,
         "import/first": 0,
         "import/newline-after-import": 0,
+        "import/prefer-default-export": 0,
         "generator-star-spacing": 0,
         "react/forbid-prop-types": 0,
         "react/sort-comp": 0,
