--- a/package.json
+++ b/package.json
@@ -29,6 +29,12 @@
         "ios >= 9",
         "Android >= 4"
     ],
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm run lint",
+            "pre-push": "npm run lint"
+        }
+    },
     "scripts": {
         "start": "cross-env NODE_ENV=development node ./src/js/server.js",
         "clean": "rimraf ./dist/*",
@@ -41,6 +47,7 @@
         "express": "^4.17.1",
         "fluxible": "^1.4.0",
         "fluxible-addons-react": "^0.2.16",
+        "keymirror": "^0.1.1",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6"
@@ -68,7 +75,6 @@
         "eslint-plugin-prettier": "^3.1.0",
         "eslint-plugin-react": "^7.14.3",
         "husky": "^3.0.1",
-        "keymirror": "^0.1.1",
         "npm-run-all": "^4.1.5",
         "prettier": "^1.18.2",
         "rimraf": "^2.6.3",
