--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
         "express": "^4.17.1",
         "fluxible": "^1.4.0",
         "fluxible-addons-react": "^0.2.16",
+        "fluxible-plugin-context-config": "^2.0.0",
         "keymirror": "^0.1.1",
+        "lodash": "^4.17.15",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6"
