--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "husky": "^3.0.1",
         "mini-css-extract-plugin": "^0.8.0",
         "node-sass": "^4.12.0",
+        "normalize.css": "^8.0.1",
         "npm-run-all": "^4.1.5",
         "postcss-cli": "^6.1.3",
         "postcss-loader": "^3.0.0",
