--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "name": "react-crossword",
     "version": "1.0.0",
     "description": "Crossword built with React",
-    "license": "",
+    "license": "UNLICENSED",
+    "main": "start.js",
     "contributors": [
         {
             "name": "Greg Kappatos",
@@ -41,7 +42,9 @@
         "build:dev": "npm run clean && cross-env NODE_ENV=development webpack --bail --hide-modules --progress --mode development",
         "build": "npm run clean && cross-env NODE_ENV=production webpack --bail --hide-modules --progress --mode production",
         "fmt:js": "prettier --write ./src/js/**/*.js ./data/**/*.js",
-        "lint": "npm run fmt:js && eslint --fix --ext .js ./src/js/**/*.js ./data/**/*.js"
+        "lint:js": "npm run fmt:js && eslint --fix --ext .js ./src/js/**/*.js ./data/**/*.js",
+        "lint:scss": "sass-lint-auto-fix --config .sass-lint.yml ./src/**/*.scss",
+        "lint": "run-p lint:js lint:scss"
     },
     "dependencies": {
         "express": "^4.17.1",
@@ -67,6 +70,7 @@
         "babel-polyfill": "^6.26.0",
         "babel-register": "^6.26.0",
         "cross-env": "^5.2.0",
+        "css-loader": "^3.1.0",
         "cypress": "^3.4.0",
         "eslint": "^5.16.0",
         "eslint-config-airbnb": "^17.1.1",
@@ -76,11 +80,22 @@
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-prettier": "^3.1.0",
         "eslint-plugin-react": "^7.14.3",
+        "file-loader": "^4.1.0",
         "husky": "^3.0.1",
+        "mini-css-extract-plugin": "^0.8.0",
+        "node-sass": "^4.12.0",
+        "normalize.css": "^8.0.1",
         "npm-run-all": "^4.1.5",
+        "postcss-cli": "^6.1.3",
+        "postcss-loader": "^3.0.0",
         "prettier": "^1.18.2",
+        "resolve-url-loader": "^3.1.0",
         "rimraf": "^2.6.3",
+        "sass-lint": "^1.13.1",
+        "sass-lint-auto-fix": "^0.17.0",
+        "sass-loader": "^7.1.0",
         "uglifyjs-webpack-plugin": "^2.1.3",
+        "url-loader": "^2.1.0",
         "webpack": "^4.38.0",
         "webpack-cli": "^3.3.6"
     }
