--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     ],
     "husky": {
         "hooks": {
-            "pre-commit": "npm run lint",
-            "pre-push": "npm run lint"
+            "pre-commit": "npm run lint && npm run build && npm run test",
+            "pre-push": "npm run test"
         }
     },
     "scripts": {
@@ -44,7 +44,9 @@
         "fmt:js": "prettier --write ./src/js/**/*.js ./data/**/*.js",
         "lint:js": "npm run fmt:js && eslint --fix --ext .js ./src/js/**/*.js ./data/**/*.js",
         "lint:scss": "sass-lint-auto-fix --config .sass-lint.yml ./src/**/*.scss",
-        "lint": "run-p lint:js lint:scss"
+        "lint": "run-p lint:js lint:scss",
+        "test": "jest ./tests/unit/components -u",
+        "test:functional": "npx cypress open"
     },
     "dependencies": {
         "express": "^4.17.1",
@@ -72,6 +74,8 @@
         "cross-env": "^5.2.0",
         "css-loader": "^3.1.0",
         "cypress": "^3.4.0",
+        "enzyme": "^3.10.0",
+        "enzyme-adapter-react-16": "^1.14.0",
         "eslint": "^5.16.0",
         "eslint-config-airbnb": "^17.1.1",
         "eslint-config-prettier": "^6.0.0",
@@ -82,6 +86,7 @@
         "eslint-plugin-react": "^7.14.3",
         "file-loader": "^4.1.0",
         "husky": "^3.0.1",
+        "jest": "^24.8.0",
         "mini-css-extract-plugin": "^0.8.0",
         "node-sass": "^4.12.0",
         "normalize.css": "^8.0.1",
@@ -89,6 +94,7 @@
         "postcss-cli": "^6.1.3",
         "postcss-loader": "^3.0.0",
         "prettier": "^1.18.2",
+        "react-test-renderer": "^16.8.6",
         "resolve-url-loader": "^3.1.0",
         "rimraf": "^2.6.3",
         "sass-lint": "^1.13.1",
